[package]
name = "tmux-first-stage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.22", features = ["derive"] }
console = "0.15.7"
dialoguer = { version = "0.10.4", features = ["fuzzy-select"] }
rust_fzf = "0.1.2"
