[package]
name = "tmux-first-stage"
version = "0.1.0"
edition = "2021"
authors = ["Liam Ederzeel"]
description = "A blazingly fast tmux session launcher and switcher"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.22", features = ["derive"] }
console = "0.15.7"
rust_fzf = "0.1.2"

